--- a/DOM-project-01/main.css
+++ b/DOM-project-01/main.css
@@ -14,6 +14,7 @@ body {
 .tile {
   height: 100px;
   background: #111111;
-  border: 5px solid #444444;
+  border: 5px solid #4d4237;
+  border-radius: 10px;
   cursor: pointer;
 }
